# network-management-system

./: .gitignore  README.md  WALKTHROUGH.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  vite.config.ts
cert-installer/: requirements.txt  server.py
cert-installer/static/: script.js  style.css
cert-installer/templates/: android.html  base.html  chromeos.html  complete.html  error.html  generic.html  index.html  ios.html  linux.html  macos.html  windows.html
config/: alerts.json  blocklist.json  device_profiles.json  keywords.json  notifications.json  schedules.json  settings.json
python/: __init__.py  main.py  requirements.txt
python/alerts/: __init__.py  alert_engine.py  keywords.py  notifier.py
python/arp/: __init__.py  arp_gateway.py  device_scanner.py  ip_forwarding.py
python/blocking/: __init__.py  blocker.py  categories.py  schedules.py
python/database/: __init__.py  db_manager.py  models.py  search.py
python/dns/: __init__.py  dns_blocker.py  dns_capture.py  dns_parser.py
python/https/: __init__.py  cert_generator.py  content_decoder.py  traffic_parser.py  transparent_proxy.py
python/stealth/: __init__.py  device_profiles.py  hostname_changer.py  mac_changer.py
python/utils/: __init__.py  config.py  logger.py  network_utils.py
scripts/: build.ps1  generate_cert.ps1  generate_icons.py  install.ps1  run.ps1  run_as_admin.ps1  setup_npcap.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  python.rs  state.rs
src/components/: Layout.tsx
(+50 files in other folders)
